# bot-slack

./: .gitignore  Dockerfile  app.py  pyproject.toml
app/: __init__.py  __main__.py
app/client/: slack_client.py
app/controller/: ping_controller.py  slack_events_controller.py
app/enums/: qa_enum.py
app/services/: principais_duvidas_service.py  slack_service.py
src/: __init__.py  __main__.py  environment.py
src/client/: slack_client.py
src/configurations/: logger.py
src/controller/: ping_controller.py  slack_events_controller.py
src/enums/: qa_enum.py
src/services/: principais_duvidas_service.py  slack_service.py  utils.py
src/services/events_service/: events_service.py  events_slack_blocks.py  events_strategy.py
src/services/interactive_service/: actions_slack_blocks.py  actions_strategy.py  interactive_service.py  interactive_slack_blocks.py  views_slack_blocks.py  views_strategy.py
tests/: conftest.py  fake_slack_client.py  test_app.py  test_ping.py  test_slash_commands.py
tests/e2e/: conftest.py  test_slack_events_controller.py
tests/unit/interactive_service/: test_actions_strategy.py
