[tool.poetry]
name = "bot_slack_dse"
version = "0.1.0"
description = ""
authors = ["guhonorato <gustavo.honorato@mercadolivre.com>"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]


[tool.poetry.dependencies]
python = ">=3.8,<4"
flask-restx = "0.5.1"
flask = "~2.1.3"
slackeventsapi = "^3.0.1"
slack-sdk = "^3.19.5"
aiohttp = "^3.8.3"
newrelic = "^8.9.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
pytest = "^7.0.0"
pytest-flask = "^1.2.0"
bandit = "^1.7.1"
mypy = "^0.931"
pylint = "^2.12.2"
black = "^22.1.0"
coverage = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"